--- a/src/app/tools/rental-property-report/rental-property-report.component.html
+++ b/src/app/tools/rental-property-report/rental-property-report.component.html
@@ -1,1 +1,6 @@
 <h1 class="heading">Result page in construction...</h1>
+<div class="container">
+    <div class="row">
+        {{property.price}}
+    </div>
+</div>
