--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -12,21 +12,21 @@
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyAddress">Property Address</label>
-                        <input type="text" class="form-control" id="propertyAddress">
+                        <input type="text" class="form-control" id="propertyAddress" (keyup)="setPropertyAddress($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyCity">Property City</label>
-                        <input type="text" class="form-control" id="propertyCity">
+                        <input type="text" class="form-control" id="propertyCity" (keyup)="setPropertyCity($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyState">Property State</label>
-                        <input type="text" class="form-control" id="propertyState">
+                        <input type="text" class="form-control" id="propertyState" (keyup)="setPropertyState($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyZip">Property Zip</label>
-                        <input type="text" class="form-control" id="propertyZip">
+                        <input type="text" class="form-control" id="propertyZip" (keyup)="setPropertyZip($event)">
                     </div>
                 </div>
                 <div class="form-row">
@@ -44,8 +44,8 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
-                        <label for="propertyPhotos">Property Description</label>
-                        <textarea class="form-control" id="propertyDescription"></textarea>
+                        <label for="propertyDescription">Property Description</label>
+                        <textarea class="form-control" id="propertyDescription" (keyup)="setPropertyDescription($event)"></textarea>
                     </div>
                 </div>
             </form>
@@ -62,17 +62,17 @@
         <div class="col-sm-8 col-xs-12 offset-sm-2">
             <form>
                 <div class="form-row">
-                    <div class="form-group col-sm col-xs-12">
+                    <div class="form-group col-sm-3 col-xs-12">
                         <label for="askingPrice">Asking Price</label>
                         <input type="number" class="form-control" id="askingPrice" (keyup)="setAaskingPrice($event)">
                     </div>
-                    <div class="form-group col-sm col-xs-12">
+                    <div class="form-group col-sm-3 col-xs-12">
                         <label for="repairCost">Repair Cost</label>
-                        <input type="number" class="form-control" id="repairCost">
+                        <input type="number" class="form-control" id="repairCost" (keyup)="setRepairCost($event)">
                     </div>
-                    <div class="form-group col-sm col-xs-12">
+                    <div class="form-group col-sm-3 col-xs-12">
                         <label for="afterRepairValue">After Repair Value</label>
-                        <input type="number" class="form-control" id="afterRepairValue">
+                        <input type="number" class="form-control" id="afterRepairValue" (keyup)="setAfterRepairValue($event)">
                     </div>
                 </div>
                 <div class="form-row">
@@ -89,6 +89,10 @@
                         <label for="interest">Interest (%)</label>
                         <input type="number" class="form-control" id="interest" (keyup)="setInterestRate($event)">
                     </div>
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="closingCost">Closing Cost</label>
+                        <input type="number" class="form-control" id="closingCost" (keyup)="setClosingCost($event)">
+                    </div>
                 </div>
             </form>
         </div>
@@ -102,29 +106,29 @@
                 <div class="form-row">
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="monthlyRent">Monthly Rent</label>
-                        <input type="number" class="form-control" id="monthlyRent">
+                        <input type="number" class="form-control" id="monthlyRent" (keyup)="setMonthlyRent($event)">
                     </div>
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="annualInsurance">Annual Insurance</label>
-                        <input type="number" class="form-control" id="annualInsurance">
+                        <input type="number" class="form-control" id="annualInsurance" (keyup)="setAnnualInsurance($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="maintenance">Maintenance (%)</label>
-                        <input type="number" class="form-control" id="maintenance">
+                        <input type="number" class="form-control" id="maintenance" (keyup)="setMaintenane($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
-                        <label for="capExp">Capital Exp (%)</label>
-                        <input type="number" class="form-control" id="capExp">
+                        <label for="capEx">Capital Exp (%)</label>
+                        <input type="number" class="form-control" id="capEx" (keyup)="setCapEx($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="vacancyRate">Vacancy Rate (%)</label>
-                        <input type="number" class="form-control" id="vacancyRate">
+                        <input type="number" class="form-control" id="vacancyRate" (keyup)="setVacancyRate($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="management">Management (%)</label>
-                        <input type="number" class="form-control" id="management">
+                        <input type="number" class="form-control" id="management" (keyup)="setManagement($event)">
                     </div>
                 </div>
             </form>
