--- a/src/app/tools/rental-property-report/rental-property-report.component.html
+++ b/src/app/tools/rental-property-report/rental-property-report.component.html
@@ -1,6 +1,52 @@
 <h1 class="heading">Result page in construction...</h1>
-<div class="container">
+<div class="container" #propertyInfo>
     <div class="row">
-        {{property.price}}
+        <div class="col-sm-5 col-xs-12 offset-sm-2">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="propertyAddress">Property Address</label>
+                        <input type="text" class="form-control" id="propertyAddress" value="{{property.address}}" disabled>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="propertyCity">Property City</label>
+                        <input type="text" class="form-control" id="propertyCity" value="{{property.city}}" disabled>
+                    </div>
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="propertyState">Property State</label>
+                        <input type="text" class="form-control" id="propertyState" value="{{property.state}}" disabled>
+                    </div>
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="propertyZip">Property Zip</label>
+                        <input type="text" class="form-control" id="propertyZip" value="{{property.zip}}" disabled>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="propertyAnnualTaxes">Annual Property Taxes</label>
+                        <input type="number" class="form-control" id="propertyAnnualTaxes" value="{{property.annualPropertyTax}}" disabled>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="propertyPhotos">Property Photos</label>
+                        <input type="url" class="form-control" id="propertyPhotos" value="{{property.photo}}" disabled>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-sm col-xs-12">
+                        <label for="propertyDescription">Property Description</label>
+                        <textarea class="form-control" id="propertyDescription" value="{{property.description}}" disabled></textarea>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="col-sm-3 col-xs-12">
+            <img src="{{imgUrl}}" alt="Property photos not available" class="rounded float-left img-fluid">
+        </div>
     </div>
 </div>
+<hr>
