add roadmap to home page

--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,5 +1,5 @@
-<header class="wide heading">
-    <h1>Real Estate Investment Calculators</h1>
+<header class="wide heading bg-dark text-light">
+    <h2>Real Estate Investment Calculators</h2>
 </header>
 
 <br />
