update UI and save rental prop calc input form

--- a/src/app/tools/rental-property-report/rental-property-report.component.html
+++ b/src/app/tools/rental-property-report/rental-property-report.component.html
@@ -1,4 +1,8 @@
-<h1 class="heading">Result page in construction...</h1>
+<header class="wide heading bg-dark text-light">
+    <h1>Result page in construction...</h1>
+</header>
+<br>
+<br>
 <div class="container" #propertyInfo>
     <div class="row">
         <div class="col-sm-5 col-xs-12 offset-sm-2">
@@ -6,7 +10,8 @@
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyAddress">Property Address</label>
-                        <input type="text" class="form-control" id="propertyAddress" value="{{property.address}}" disabled>
+                        <input type="text" class="form-control" id="propertyAddress" value="{{property.address}}"
+                            disabled>
                     </div>
                 </div>
                 <div class="form-row">
@@ -26,13 +31,15 @@
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyAnnualTaxes">Annual Property Taxes</label>
-                        <input type="number" class="form-control" id="propertyAnnualTaxes" value="{{property.annualPropertyTax}}" disabled>
+                        <input type="number" class="form-control" id="propertyAnnualTaxes"
+                            value="{{property.annualPropertyTax}}" disabled>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyDescription">Property Description</label>
-                        <textarea class="form-control" id="propertyDescription" value="{{property.description}}" disabled></textarea>
+                        <textarea class="form-control" id="propertyDescription" value="{{property.description}}"
+                            disabled></textarea>
                     </div>
                 </div>
             </form>
