--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <header class="wide heading bg-dark text-light">
-    <h2 id="timeline">Real Estate Investment Roadmap</h2>
+    <div class="text-center">
+        <h2 id="timeline">F.I.R.E Roadmap</h2>
+        <p id="timelineSubtitle">Financial Independence Real Estate</p>
+    </div>
 </header>
 
 <div class="container">
@@ -8,11 +11,11 @@
             <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">2020.3-2020.6</h4>
-                    <br>
+                    <h4 class="timeline-title">2019.3-2020.2</h4>
+                    <hr>
                 </div>
                 <div class="timeline-body">
-                    <p>Buy One Single family in B- or C+ area.</p>
+                    <p>Learn all the basics</p>
                 </div>
             </div>
         </li>
@@ -20,21 +23,11 @@
             <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                    <h4 class="timeline-title">2020.3-2020.6</h4>
                 </div>
+                <hr>
                 <div class="timeline-body">
-                    <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-                        porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros
-                        vermeio, in elementis mé pra quem é amistosis quis leo.
-                        Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci
-                        latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-                    <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé,
-                        cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a,
-                        posuere ut mi. Ut scelerisque neque et turpis posuere
-                        pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo.
-                        Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit
-                        auctor. Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+                    <p>One move-in ready single family house</p>
                 </div>
             </div>
         </li>
@@ -42,31 +35,26 @@
             <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                    <h4 class="timeline-title">2020.12-2021.4</h4>
                 </div>
+                <hr>
                 <div class="timeline-body">
-                    <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-                        porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros
-                        vermeio, in elementis mé pra quem é amistosis quis leo.
-                        Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci
-                        latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                    <p>One duplex or two single family houses</p>
                 </div>
             </div>
         </li>
         <li class="timeline-inverted">
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                    <h4 class="timeline-title">2021.12-2022.4</h4>
                 </div>
+                <hr>
                 <div class="timeline-body">
-                    <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-                        porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros
-                        vermeio, in elementis mé pra quem é amistosis quis leo.
-                        Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci
-                        latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                    <p>Two duplex or three single family houses</p>
                 </div>
             </div>
         </li>
+        <!--
         <li>
             <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
             <div class="timeline-panel">
@@ -109,18 +97,30 @@
                 </div>
             </div>
         </li>
+        -->
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
         <li class="timeline-inverted">
             <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                    <h4 class="timeline-title">2029</h4>
                 </div>
+                <hr>
                 <div class="timeline-body">
-                    <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-                        porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros
-                        vermeio, in elementis mé pra quem é amistosis quis leo.
-                        Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci
-                        latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                    <p>F.I.R.E</p>
                 </div>
             </div>
         </li>
