--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -1,4 +1,4 @@
-<header class="wide heading">
+<header class="wide heading bg-dark text-light">
     <h1>Rental Property Calculator</h1>
 </header>
 
@@ -12,40 +12,39 @@
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyAddress">Property Address</label>
-                        <input type="text" class="form-control" id="propertyAddress" (keyup)="setPropertyAddress($event)">
+                        <input type="text" class="form-control" id="propertyAddress" value={{propertyAddress}} (keyup)="setPropertyAddress($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
-                        <label for="propertyCity">Property City</label>
-                        <input type="text" class="form-control" id="propertyCity" (keyup)="setPropertyCity($event)">
+                        <label for="propertyCity">City</label>
+                        <input type="text" class="form-control" id="propertyCity" value={{propertyCity}} (keyup)="setPropertyCity($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
-                        <label for="propertyState">Property State</label>
-                        <input type="text" class="form-control" id="propertyState" (keyup)="setPropertyState($event)">
+                        <label for="propertyState">State</label>
+                        <input type="text" class="form-control" id="propertyState" value={{propertyState}} (keyup)="setPropertyState($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
-                        <label for="propertyZip">Property Zip</label>
-                        <input type="text" class="form-control" id="propertyZip" (keyup)="setPropertyZip($event)">
+                        <label for="propertyZip">Zip</label>
+                        <input type="text" class="form-control" id="propertyZip" value={{propertyZip}} (keyup)="setPropertyZip($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
-                        <label for="propertyAnnualTaxes">Annual Property Taxes</label>
-                        <input type="number" class="form-control" id="propertyAnnualTaxes"
-                            (keyup)="setAnnualPropertyTaxes($event)">
+                        <label for="annualPropertyTaxes">Annual Property Taxes</label>
+                        <input type="number" class="form-control" id="annualPropertyTaxes" value={{annualPropertyTaxes}} (keyup)="setAnnualPropertyTaxes($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyPhotos">Property Photos</label>
-                        <input type="url" class="form-control" id="propertyPhotos" (keyup)="setImgUrl($event)">
+                        <input type="url" class="form-control" id="propertyPhotos" value={{imgUrl}} (keyup)="setImgUrl($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="propertyDescription">Property Description</label>
-                        <textarea class="form-control" id="propertyDescription" (keyup)="setPropertyDescription($event)"></textarea>
+                        <textarea class="form-control" id="propertyDescription" value={{propertyDescritpion}} (keyup)="setPropertyDescription($event)"></textarea>
                     </div>
                 </div>
             </form>
@@ -64,34 +63,34 @@
                 <div class="form-row">
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="askingPrice">Asking Price</label>
-                        <input type="number" class="form-control" id="askingPrice" (keyup)="setAaskingPrice($event)">
+                        <input type="number" class="form-control" id="askingPrice" value={{askingPrice}} (keyup)="setAaskingPrice($event)">
                     </div>
                     <div class="form-group col-sm-3 col-xs-12">
-                        <label for="repairCost">Repair Cost</label>
-                        <input type="number" class="form-control" id="repairCost" (keyup)="setRepairCost($event)">
+                        <label for="repairCost">Estimated Repair Cost</label>
+                        <input type="number" class="form-control" id="repairCost" value={{repairCost}} (keyup)="setRepairCost($event)">
                     </div>
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="afterRepairValue">After Repair Value</label>
-                        <input type="number" class="form-control" id="afterRepairValue" (keyup)="setAfterRepairValue($event)">
+                        <input type="number" class="form-control" id="afterRepairValue" value={{afterRepairValue}} (keyup)="setAfterRepairValue($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="downPayment">Down Payment (%)</label>
-                        <input type="number" class="form-control" id="downPayment" (keyup)="setDownPayment($event)">
+                        <input type="number" class="form-control" id="downPayment" value={{downPayment}} (keyup)="setDownPayment($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="mortgagePeriod">Mortgage Period (years)</label>
-                        <input type="number" class="form-control" id="mortgagePeriod"
+                        <input type="number" class="form-control" id="mortgagePeriod" value={{mortgagePeriod}}
                             (keyup)="setMortgagePeriod($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="interest">Interest (%)</label>
-                        <input type="number" class="form-control" id="interest" (keyup)="setInterestRate($event)">
+                        <input type="number" class="form-control" id="interest" value={{interestRate}} (keyup)="setInterestRate($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="closingCost">Closing Cost</label>
-                        <input type="number" class="form-control" id="closingCost" (keyup)="setClosingCost($event)">
+                        <input type="number" class="form-control" id="closingCost" value={{closingCost}} (keyup)="setClosingCost($event)">
                     </div>
                 </div>
             </form>
@@ -106,29 +105,29 @@
                 <div class="form-row">
                     <div class="form-group col-sm-3 col-xs-12">
                         <label for="monthlyRent">Monthly Rent</label>
-                        <input type="number" class="form-control" id="monthlyRent" (keyup)="setMonthlyRent($event)">
+                        <input type="number" class="form-control" id="monthlyRent" value={{monthlyRent}} (keyup)="setMonthlyRent($event)">
                     </div>
                     <div class="form-group col-sm-3 col-xs-12">
-                        <label for="annualInsurance">Annual Insurance</label>
-                        <input type="number" class="form-control" id="annualInsurance" (keyup)="setAnnualInsurance($event)">
+                        <label for="monthlyInsurance">Monthly Insurance</label>
+                        <input type="number" class="form-control" id="monthlyInsurance" value={{monthlyInsurance}} (keyup)="setMonthlyInsurance($event)">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
                         <label for="maintenance">Maintenance (%)</label>
-                        <input type="number" class="form-control" id="maintenance" (keyup)="setMaintenane($event)">
+                        <input type="number" class="form-control" id="maintenance" value={{maintenance}} (keyup)="setMaintenane($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="capEx">Capital Exp (%)</label>
-                        <input type="number" class="form-control" id="capEx" (keyup)="setCapEx($event)">
+                        <input type="number" class="form-control" id="capEx" value={{capEx}} (keyup)="setCapEx($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="vacancyRate">Vacancy Rate (%)</label>
-                        <input type="number" class="form-control" id="vacancyRate" (keyup)="setVacancyRate($event)">
+                        <input type="number" class="form-control" id="vacancyRate" value={{vacancy}} (keyup)="setVacancyRate($event)">
                     </div>
                     <div class="form-group col-sm col-xs-12">
                         <label for="management">Management (%)</label>
-                        <input type="number" class="form-control" id="management" (keyup)="setManagement($event)">
+                        <input type="number" class="form-control" id="management" value={{management}} (keyup)="setManagement($event)">
                     </div>
                 </div>
             </form>
@@ -140,7 +139,7 @@
     <div class="row">
         <div class="col-sm-2 col-xs-12 offset-sm-5 text-center">
             <a routerLink="/tools/rental-property-report"
-                class="btn btn-dark align-items-center btn-block" (click)="calculate()">Calculate</a>
+                class="btn btn-dark align-items-center btn-block text-light" (click)="calculate()">Calculate</a>
         </div>
     </div>
 </div>
