--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -1,13 +1,13 @@
-<div class="wide heading">
+<div class="wide heading bg-dark">
     <div class="row col-md-8 justify-content-around align-items-center">
-        <div class="col-sm col-xs-12 p-1">
+        <div class="col-sm-3 col-xs-12 p-2">
             <input type="text" class="form-control search-slt" placeholder="City" #inputCity>
         </div>
-        <div class="col-sm col-xs-12 p-1">
+        <div class="col-sm-3 col-xs-12 p-2">
             <input type="text" class="form-control search-slt" placeholder="State" #inputState>
         </div>
-        <div class="col-sm col-xs-12 p-1">
-            <button type="button" class="btn btn-block btn-dark"
+        <div class="col-sm-3 col-xs-12 p-2">
+            <button type="button" class="btn btn-block btn-info"
                 (click)="search(inputCity.value, inputState.value)">Search</button>
         </div>
     </div>
