worked on report page

--- a/src/app/tools/rental-property-report/rental-property-report.component.css
+++ b/src/app/tools/rental-property-report/rental-property-report.component.css
@@ -1,3 +1,14 @@
 .title {
-    color: grey;
+  color: grey;
+}
+dd {
+  float: left;
+  margin-right: 5rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+dt {
+  float: right;
+  margin-top: 0;
+  margin-bottom: 0;
 }
