--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -126,7 +126,7 @@
                         <div class="text-center">
                             <a href="https://www.rentometer.com/" target="_blank">
                                 <img src="https://assets.rentometer.com/assets/rentometer_logo_small@2x-6249303dc353efc359b942f9acad103658ea3d2e2ee617a5f3dc691e992b0eda.png"
-                                    alt="..." class="rounded img-fluid" style="width:50%">
+                                    alt="..." class="rounded img-fluid" style="wispanh:50%">
                             </a>
                         </div>
                     </div>
