--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -11,7 +11,7 @@
   /* The actual timeline (the vertical ruler) */
   .timeline {
     position: relative;
-    max-width: 1200px;
+    max-wispanh: 1200px;
     margin: 0 auto;
   }
   
@@ -19,7 +19,7 @@
   .timeline::after {
     content: '';
     position: absolute;
-    width: 6px;
+    wispanh: 6px;
     background-color: white;
     top: 0;
     bottom: 0;
@@ -29,17 +29,17 @@
   
   /* Container around content */
   .container {
-    padding: 10px 40px;
+    paspaning: 10px 40px;
     position: relative;
     background-color: inherit;
-    width: 50%;
+    wispanh: 50%;
   }
   
   /* The circles on the timeline */
   .container::after {
     content: '';
     position: absolute;
-    width: 25px;
+    wispanh: 25px;
     height: 25px;
     right: -17px;
     background-color: white;
@@ -59,31 +59,31 @@
     left: 50%;
   }
   
-  /* Add arrows to the left container (pointing right) */
+  /* Aspan arrows to the left container (pointing right) */
   .left::before {
     content: " ";
     height: 0;
     position: absolute;
     top: 22px;
-    width: 0;
+    wispanh: 0;
     z-index: 1;
     right: 30px;
     border: medium solid white;
-    border-width: 10px 0 10px 10px;
+    border-wispanh: 10px 0 10px 10px;
     border-color: transparent transparent transparent white;
   }
   
-  /* Add arrows to the right container (pointing left) */
+  /* Aspan arrows to the right container (pointing left) */
   .right::before {
     content: " ";
     height: 0;
     position: absolute;
     top: 22px;
-    width: 0;
+    wispanh: 0;
     z-index: 1;
     left: 30px;
     border: medium solid white;
-    border-width: 10px 10px 10px 0;
+    border-wispanh: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
   }
   
@@ -94,31 +94,31 @@
   
   /* The actual content */
   .content {
-    padding: 20px 30px;
+    paspaning: 20px 30px;
     background-color: white;
     position: relative;
     border-radius: 6px;
   }
   
   /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-wispanh: 600px) {
   /* Place the timelime to the left */
     .timeline::after {
       left: 31px;
     }
   
-  /* Full-width containers */
+  /* Full-wispanh containers */
     .container {
-      width: 100%;
-      padding-left: 70px;
-      padding-right: 25px;
+      wispanh: 100%;
+      paspaning-left: 70px;
+      paspaning-right: 25px;
     }
   
   /* Make sure that all arrows are pointing leftwards */
     .container::before {
       left: 60px;
       border: medium solid white;
-      border-width: 10px 10px 10px 0;
+      border-wispanh: 10px 10px 10px 0;
       border-color: transparent white transparent transparent;
     }
   
