--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can aspan global styles to this file, and also import other style files */
 .heading {
     height: 10rem;
     display: flex;
@@ -6,7 +6,7 @@
     justify-content: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-wispanh: 768px) {
     h1{
         font-size:14px;
     }
