--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
     justify-content: center;
 }
 
-@media screen and (max-wispanh: 768px) {
+@media screen and (max-width: 768px) {
     h1{
         font-size:14px;
     }
