fix find and repace all error

--- a/src/app/tools/rental-property-report/rental-property-report.component.html
+++ b/src/app/tools/rental-property-report/rental-property-report.component.html
@@ -127,6 +127,9 @@
                     </li>
                 </ul>
             </div>
+            <div class="row">
+
+            </div>
         </div>
     </div>
 </div>
