--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can aspan global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
 .heading {
     height: 10rem;
     display: flex;
