update rental prop report title

--- a/src/app/tools/rental-property-report/rental-property-report.component.html
+++ b/src/app/tools/rental-property-report/rental-property-report.component.html
@@ -1,5 +1,5 @@
 <header class="wide heading bg-dark text-light">
-    <h1>Report page in construction...</h1>
+    <h1>Rental Property Analysis Report</h1>
 </header>
 <br>
 <br>
@@ -56,16 +56,13 @@
             <ul class="col-sm-12 col-xs-12">
                 <li>
                     <span class="title col-sm-6 col-xs-12 p-0">Down Payment</span>
-                    <span class="col-sm-6 col-xs-12 p-0"><strong
-                            class="float-right">{{downPayment}}</strong></span>
+                    <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{downPayment}}</strong></span>
                 </li>
                 <span class="title col-sm-6 col-xs-12 p-0">Loan Amount</span>
-                <span class="col-sm-6 col-xs-12 p-0"><strong
-                        class="float-right">{{loanAmount}}</strong></span>
+                <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{loanAmount}}</strong></span>
                 <li>
                     <span class="title col-sm-6 col-xs-12 p-0">Loan Period</span>
-                    <span class="col-sm-6 col-xs-12 p-0"><strong
-                            class="float-right">{{loanPeriod}}</strong></span>
+                    <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{loanPeriod}}</strong></span>
                 </li>
                 <li>
                     <span class="title col-sm-6 col-xs-12 p-0">Loan Interest Rate</span>
@@ -74,8 +71,7 @@
                 </li>
                 <li>
                     <span class="title col-sm-6 col-xs-12 p-0">Monthly P&I</span>
-                    <span class="col-sm-6 col-xs-12 p-0"><strong
-                            class="float-right">{{monthlyPI}}</strong></span>
+                    <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{monthlyPI}}</strong></span>
                 </li>
                 <li>
                     <span class="title col-sm-6 col-xs-12 p-0">Total Cash Needed</span>
@@ -128,7 +124,27 @@
                 </ul>
             </div>
             <div class="row">
+                <div class="col-sm col-xs-12 text-center">
+                    Expenses
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-5 col-xs-12">
 
+                </div>
+                <div class="col-sm col-xs-12">
+                    <ul>
+                        <li>
+                            <span>Total operating expense:</span>
+                            <span class="float-right"></span>
+                        </li>
+                        <li>
+                            <span>Mortgage expenses:</span>
+                            <span class="float-rtight">{{monthlyPI}}</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
